# quadtreefabric

./: README.md  config.py  nodes.py  plugins_install.txt  pyproject.toml
plugins/: c_exec.py  cpp_exec.py  python_exec.py
runtime/: compile_and_run.py  constants.py  registry.py  session.py
src/quadtreefabric/: README.md  config.py  nodes.py  plugins_install.txt  tree.txt
src/quadtreefabric/plugins/: c_exec.py  cpp_exec.py  java_exec.py  python_exec.py
src/quadtreefabric/runtime/: compile_and_run.py  constants.py  registry.py
